--- a/wpfBlend/wpfBlend/wpfBlend.csproj
+++ b/wpfBlend/wpfBlend/wpfBlend.csproj
@@ -22,6 +22,9 @@
     <IsWebBootstrapper>true</IsWebBootstrapper>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <PublishUrl>Publish\</PublishUrl>
+    <Win32Resource>
+    </Win32Resource>
+    <ApplicationIcon>www.ico.la_8afd0be35484f4aa452d524611142aa2_32X32.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -124,6 +127,9 @@
     <Resource Include="main_backgroud.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="www.ico.la_8afd0be35484f4aa452d524611142aa2_32X32.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildBinPath)\Microsoft.WinFX.targets" />
